app/kubernetes_manifests/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pass-generator
  labels:
    app: pass-generator
spec:
  type: ClusterIP
  selector:
    app: pass-generator
  ports:
  - port: 5000
    targetPort: http-server
